--- a/Zbang.Cloudents.Mvc4WebRole/Content/HomePage/homePage2.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/HomePage/homePage2.less
@@ -40,15 +40,20 @@
     }
 
     .home-page-body {
-        background-attachment: scroll;
-        background-repeat: no-repeat;
         z-index: 1;
         position: absolute;
         left: 0;
         top: 0;
         bottom: 0;
         right: 0;
-
+        /*background-attachment: scroll;
+        background-repeat: no-repeat;
+        z-index: 1;
+        position: absolute;
+        left: 0;
+        top: 0;
+        bottom: 0;
+        right: 0;*/
         .loader {
             display: none;
             position: fixed;
@@ -95,9 +100,7 @@
                 font-weight: bold;
             }
         }
-
-
-        > section, footer {
+        /*> section, footer {
             overflow: auto;
             padding: 50px 5%;
             -moz-box-sizing: border-box;
@@ -107,7 +110,7 @@
             @media(max-width: 600px) {
                 padding: 30px 5%;
             }
-        }
+        }*/
         /*.hide-section {
             height: 0 !important;
             padding: 0 !important;
@@ -126,8 +129,7 @@
                 text-align: center;
                 margin-top: 0;
             }
-
-            &.intro .login-option {
+            /*&.intro .login-option {
                 border: none;
                 padding: 8px;
                 border-radius: 16px;
@@ -147,10 +149,9 @@
                     display: block;
                     width: auto;
                 }
-            }
-
+            }*/
             &.main {
-                position: relative;
+                /*position: relative;
                 text-align: center;
                 padding-bottom: 200px;
                 margin-top: @heightOfstaticPageHeader;
@@ -228,7 +229,7 @@
                             font-size: 6vw;
                         }
                     }
-                }
+                }*/
                 /*#region forms*/
                 .forms {
                     -webkit-transition: max-height 0.5s;
@@ -704,12 +705,11 @@
                         }
                     }
                 }
-
-                @media(min-width: 960px) {
+                /*@media(min-width: 960px) {
                     .statistics, .welcome-text {
                         width: ~"calc(100% - 430px)";
                     }
-                }
+                }*/
             }
 
 
