--- a/Zbang.Cloudents.Mvc4WebRole/Views/Home/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Home/Index.cshtml
@@ -252,7 +252,7 @@
                     @HomePageResources.SignUpForFree
                 </button>
                 <div class="text">@HomePageResources.A6&nbsp;<b>@HomePageResources.Free</b></div>
-                <div class="video-wrapper">
+                <div class="video-wrapper offset-bottom">
                     <input type="checkbox" id="showVideo" />
                     <label id="open-video" for="showVideo">
                         <span class="desktop-wrapper"><span class="video-image desktop os-animation" alt="Spitball video" data-os-animation="fadeIn" data-os-animation-delay="0.5s"></span></span>
