--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/staticPage.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/staticPage.rtl.css
@@ -238,7 +238,7 @@ iframe {
 }
 @media (min-width: 1080px) {
   .static-page-header nav ul li.language {
-    padding-right: calc(100% - 635px);
+    padding-right: calc(100% - 725px);
     min-width: 75px;
   }
 }
@@ -1300,6 +1300,269 @@ iframe {
   .features-page .page-content .intro-text {
     font-size: 18px;
   }
+}
+.promo-page .home-page-body,
+.homePage .home-page-body {
+  background-attachment: scroll;
+  background-repeat: no-repeat;
+}
+.promo-page .home-page-body .page-content,
+.homePage .home-page-body .page-content {
+  max-width: 100%;
+  padding: 0;
+}
+.promo-page .home-page-body section.main,
+.homePage .home-page-body section.main {
+  position: relative;
+  text-align: center;
+  padding-bottom: 200px;
+  margin-top: 60px;
+  background: linear-gradient(to top, #000 -20px, transparent 200px, transparent 100%);
+  padding: 0;
+  overflow: visible;
+}
+.promo-page .home-page-body section.main #main-wrapper,
+.homePage .home-page-body section.main #main-wrapper {
+  padding: 296px 0 40px 0;
+  overflow: visible;
+  position: relative;
+}
+@media (max-width: 600px) {
+  .promo-page .home-page-body section.main #main-wrapper,
+  .homePage .home-page-body section.main #main-wrapper {
+    padding: 50px 0 40px 0;
+  }
+}
+.promo-page .home-page-body section.main .welcome-text,
+.homePage .home-page-body section.main .welcome-text {
+  text-align: center;
+  padding: 0 10px;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  color: #ffffff;
+  display: inline-block;
+  max-width: 800px;
+  position: relative;
+}
+@media (max-width: 960px) {
+  .promo-page .home-page-body section.main .welcome-text .uni-logo-wrapper,
+  .homePage .home-page-body section.main .welcome-text .uni-logo-wrapper {
+    display: none;
+  }
+}
+.promo-page .home-page-body section.main .welcome-text .sb-logo,
+.homePage .home-page-body section.main .welcome-text .sb-logo {
+  right: -210px;
+  bottom: -40px;
+  bottom: -80px;
+  z-index: 1;
+  width: 200px;
+  height: 200px;
+  position: absolute;
+  background-color: #383838;
+  background-size: cover;
+  border: 5px solid #ffffff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
+}
+@media (max-width: 960px) {
+  .promo-page .home-page-body section.main .welcome-text,
+  .homePage .home-page-body section.main .welcome-text {
+    width: 100% !important;
+    padding: 0 10px;
+  }
+}
+.promo-page .home-page-body section.main .welcome-text > h1,
+.homePage .home-page-body section.main .welcome-text > h1 {
+  text-shadow: -2px 2px 4px #212325;
+  font-weight: bold;
+  width: 100%;
+  margin: 14px auto;
+  text-transform: capitalize;
+  display: inline-block;
+  font-size: 50px;
+}
+@media (max-width: 1200px) {
+  .promo-page .home-page-body section.main .welcome-text > h1,
+  .homePage .home-page-body section.main .welcome-text > h1 {
+    font-size: 4vw;
+  }
+}
+@media (max-width: 960px) {
+  .promo-page .home-page-body section.main .welcome-text > h1,
+  .homePage .home-page-body section.main .welcome-text > h1 {
+    font-size: 5.3vw;
+  }
+}
+@media (max-width: 600px) {
+  .promo-page .home-page-body section.main .welcome-text > h1,
+  .homePage .home-page-body section.main .welcome-text > h1 {
+    font-size: 6vw;
+  }
+}
+@media (min-width: 960px) {
+  .promo-page .home-page-body section.main .statistics,
+  .homePage .home-page-body section.main .statistics,
+  .promo-page .home-page-body section.main .welcome-text,
+  .homePage .home-page-body section.main .welcome-text {
+    width: calc(100% - 430px);
+  }
+}
+.promo-page .home-page-body section.intro .login-option,
+.homePage .home-page-body section.intro .login-option,
+.promo-page .home-page-body section.signup-area .login-option,
+.homePage .home-page-body section.signup-area .login-option {
+  border: none;
+  padding: 8px;
+  border-radius: 16px;
+  width: 200px;
+  color: #ffffff;
+  text-decoration: none;
+  margin-bottom: 20px;
+  font-size: 18px;
+  line-height: 25px;
+  cursor: pointer;
+}
+.promo-page .home-page-body section.intro .login-option.signup,
+.homePage .home-page-body section.intro .login-option.signup,
+.promo-page .home-page-body section.signup-area .login-option.signup,
+.homePage .home-page-body section.signup-area .login-option.signup {
+  font-size: 26px;
+  padding: 14px 28px;
+  font-weight: bold;
+  margin: 0 auto;
+  display: block;
+  width: auto;
+}
+.promo-page .home-page-body > section,
+.homePage .home-page-body > section,
+.promo-page .home-page-body footer,
+.homePage .home-page-body footer {
+  overflow: auto;
+  padding: 50px 5%;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+@media (max-width: 600px) {
+  .promo-page .home-page-body > section,
+  .homePage .home-page-body > section,
+  .promo-page .home-page-body footer,
+  .homePage .home-page-body footer {
+    padding: 30px 5%;
+  }
+}
+.promo-page {
+  color: #212325;
+}
+.promo-page .page-content {
+  min-height: 0;
+  height: 100%;
+}
+.promo-page .intro .text h2 {
+  font-size: 38px;
+  margin: 0 0 40px 0;
+}
+.promo-page .intro .description > div {
+  margin-right: 50px;
+  position: relative;
+  font-size: 22px;
+  margin-bottom: 15px;
+}
+.promo-page .intro .description > div:before {
+  content: '\2022';
+  position: absolute;
+  right: -20px;
+  font-size: 40px;
+  line-height: 36px;
+}
+.promo-page .intro .description > div:not(:last-child) {
+  width: calc(50% - 100px);
+  display: inline-block;
+}
+.promo-page .prizes {
+  color: #ffffff;
+}
+.promo-page .prizes .prize-list {
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+  max-width: 1000px;
+  margin: 0 auto;
+}
+.promo-page .prizes .prize-list .prize {
+  width: 30%;
+}
+.promo-page .prizes .prize-list .prize .place {
+  font-size: 26px;
+  font-weight: bold;
+  text-align: center;
+}
+.promo-page .prizes .prize-list .prize .place sup {
+  font-weight: normal;
+  font-size: 50%;
+  top: -0.8em;
+}
+.promo-page .prizes .prize-list .prize svg {
+  width: 100%;
+}
+.promo-page .prizes .prize-list .prize:nth-child(1) svg {
+  fill: #AAA7A7;
+}
+.promo-page .prizes .prize-list .prize:nth-child(2) svg {
+  fill: #C6A21B;
+}
+.promo-page .prizes .prize-list .prize:nth-child(3) svg {
+  fill: #CD7F32;
+}
+.promo-page .prizes .text p {
+  font-size: 20px;
+  max-width: 450px;
+  margin: 0 auto 20px auto;
+}
+.promo-page .intro .text,
+.promo-page .prizes .text {
+  text-align: center;
+}
+.promo-page .intro .text h1,
+.promo-page .prizes .text h1 {
+  font-weight: bold;
+  font-size: 48px;
+}
+.promo-page .rules {
+  background: #ffffff;
+}
+.promo-page .rules h1 {
+  padding-right: 70px;
+  margin-bottom: 40px;
+}
+.promo-page .rules ul {
+  padding: 0;
+}
+.promo-page .rules ul li {
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: inline-flex;
+  -webkit-align-items: flex-start;
+  align-items: flex-start;
+  -webkit-justify-content: flex-start;
+  justify-content: flex-start;
+  max-width: 46%;
+}
+.promo-page .rules ul li .rule {
+  margin: 10px;
+  font-size: 20px;
+}
+.promo-page .rules ul li .icon {
+  width: 60px;
+  height: 60px;
+  border: 1px solid black;
+  border-radius: 100%;
+  flex-shrink: 0;
 }
 .boxes {
   width: 100%;
