--- a/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Partials2/_StaticPageHeader.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Partials2/_StaticPageHeader.cshtml
@@ -47,6 +47,10 @@
                 <li id="apps">
                     <a href="@Url.RouteUrl("Apps")">@HomePageResources.A11</a>
                 </li>
+                <li class="pipe"></li>
+                <li id="apps">
+                    <a href="@Url.RouteUrl("Promotion")">@HomePageResources.A12</a>
+                </li>
 
                 <li class="language">
                     @if (!User.Identity.IsAuthenticated)
