--- a/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Partials2/_StaticPageHeader.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Partials2/_StaticPageHeader.cshtml
@@ -48,7 +48,7 @@
                     <a href="@Url.RouteUrl("Apps")">@HomePageResources.A11</a>
                 </li>
                 <li class="pipe"></li>
-                <li id="apps">
+                <li id="promo">
                     <a href="@Url.RouteUrl("Promotion")">@HomePageResources.A12</a>
                 </li>
 
