--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/variables.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/variables.less
@@ -313,7 +313,6 @@
         margin-left: -240px;
         width: ~"calc(100% + 260px)";
     }
-
     //margin-top: -5px;
 }
 
@@ -337,4 +336,48 @@
     -webkit-animation: @type @duration; /* Safari and Chrome */
     -o-animation: @type @duration;
     animation: @type @duration; /* Opera */
+}
+
+.flashcard-icon(@width, @frontColor, @backColor, @borderColor, @frontHover, @backHover, @frontText,@height: 0.88*@width) {
+    //@height: 0.88*@width;
+    position: relative;
+    width: @width;
+    height: @height;
+
+    &:before, &:after {
+        display: block;
+        width: 0.8*@width;
+        height: 0.72*@height;
+        border-radius: @height/6;
+        border: 0.048*@width solid @borderColor;
+        position: absolute;
+    }
+
+    &:before {
+        content: '';
+        bottom: 0;
+        left: @width/4;
+        background: @backColor;
+    }
+
+    &:after {
+        content: @frontText;
+        text-align: center;
+        line-height: 0.7*@height;
+        color: @backColor;
+        transform: rotate(-20deg);
+        bottom: @height/4;
+        left: 0;
+        background: @frontColor;
+    }
+
+    &:hover {
+        &:before {
+            background: @backHover;
+        }
+
+        &:after {
+            background: @frontHover;
+        }
+    }
 }
